Выполнен CR001-T014 интеграционный тест
